--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://ecf1f1d4-7164-43d4-b1d7-2d42197c649e.preview.emergentagent.com
 WDS_SOCKET_PORT=443
